--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(MailParser
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        Core/Core.pri Thridparty/Thridparty.pri
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET MailParser APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
