feat 添加维视相机SDK并连接到项目

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,6 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(MailParser
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        Core/Core.pri Thridparty/Thridparty.pri
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET MailParser APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -49,8 +48,16 @@ else()
 
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
+include_directories(${CMAKE_SOURCE_DIR}/Thridparty/SDK_Mircovision/include)
 
-target_link_libraries(MailParser PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(MailParser PRIVATE
+    Qt${QT_VERSION_MAJOR}::Widgets
+    # microvision
+    ${CMAKE_SOURCE_DIR}/Thridparty/SDK_Mircovision/lib/MVCamProptySheet.lib
+    ${CMAKE_SOURCE_DIR}/Thridparty/SDK_Mircovision/lib/MVGigE.lib
+    ${CMAKE_SOURCE_DIR}/Thridparty/SDK_Mircovision/lib/MVTickDlg.lib
+    )
+
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
