feat: 封装维视相机sdk为类作为主窗口成员，添加属性页点击功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,17 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Quick)
+find_package(Qt6 REQUIRED COMPONENTS Core)
+
     qt_add_executable(MailParser
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        Core/mvcamera.h Core/mvcamera.cpp
+
+
+
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET MailParser APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -59,6 +67,8 @@ target_link_libraries(MailParser PRIVATE
     ${CMAKE_SOURCE_DIR}/Thridparty/SDK_Mircovision/lib/MVGigE.lib
     ${CMAKE_SOURCE_DIR}/Thridparty/SDK_Mircovision/lib/MVTickDlg.lib
     )
+target_link_libraries(MailParser PRIVATE Qt6::Core Qt6::Widgets Qt6::Quick)
+target_link_libraries(MailParser PRIVATE Qt6::Core)
 
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
